; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssh/extr_packet.c_sshpkt_get_cstring.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssh/extr_packet.c_sshpkt_get_cstring.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ssh = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sshpkt_get_cstring(%struct.ssh* %0, i8** %1, i64* %2) #0 {
  %4 = alloca %struct.ssh*, align 8
  %5 = alloca i8**, align 8
  %6 = alloca i64*, align 8
  store %struct.ssh* %0, %struct.ssh** %4, align 8
  store i8** %1, i8*** %5, align 8
  store i64* %2, i64** %6, align 8
  %7 = load %struct.ssh*, %struct.ssh** %4, align 8
  %8 = getelementptr inbounds %struct.ssh, %struct.ssh* %7, i32 0, i32 0
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i8**, i8*** %5, align 8
  %13 = load i64*, i64** %6, align 8
  %14 = call i32 @sshbuf_get_cstring(i32 %11, i8** %12, i64* %13)
  ret i32 %14
}

declare dso_local i32 @sshbuf_get_cstring(i32, i8**, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
